crates/ir/tests/ir/snapshots/main__ir__lower__extern__extern_throws.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module extern__extern_throws

extern java "java.lang.Long" parseLong(String) -> Result[String, Int]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[w7]) -> List[w7]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare parseLong: (String) -> Result[String, Int]
declare println: (g) -> Unit

fn showResult(v0: Result[String, Int]) -> String =
  switch v0 {
    0 (v1: Int) ->
      let v2: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
      let v3: String = trait_call core/show.Show.show(v2, v1)
      let v4: String = concat_string("Ok(", v3)
      let v5: String = concat_string(v4, ")")
      v5
    1 (v6: String) ->
      let v7: String = concat_string("Err(", v6)
      let v8: String = concat_string(v7, ")")
      v8
  }

fn main() -> Unit =
  let v9: Result[String, Int] = call parseLong("42")
  let v10: String = call showResult(v9)
  let v11: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v12: Unit = call println(v11, v10)
  let v14: Result[String, Int] = call parseLong("abc")
  let v15: String = call showResult(v14)
  let v13: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v16: Unit = call println(v13, v15)
  v16
