crates/ir/tests/ir/snapshots/main__ir__lower__extern__extern_trait_codegen.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module extern__extern_trait_codegen

trait Runnable[z10] { run(z10): Unit }
instance extern__extern_trait_codegen.Runnable[$Fun0$Unit] { run=Runnable$$$Fun0$Unit$$run }
extern java "java.lang.Thread" new(o10) -> ~JThread
extern java "java.lang.Thread" start(~JThread) -> Unit
extern type java "java.lang.Thread" JThread
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare new: (o10) -> ~JThread
declare println: (g) -> Unit
declare start: (~JThread) -> Unit

fn main() -> Unit =
  let v3: () -> Unit = make_closure(lambda$29, [])
  let v4: Dict[extern__extern_trait_codegen.Runnable, () -> Unit] = get_dict extern__extern_trait_codegen.Runnable[() -> Unit]
  let v0: ~JThread = call new(v4, v3)
  let v5: Unit = call start(v0)
  v5

fn Runnable$$$Fun0$Unit$$run(v6: () -> Unit) -> Unit =
  let v7: Unit = call_closure v6()
  v7

fn lambda$29() -> Unit =
  let v1: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v2: Unit = call println(v1, "hello from bridge")
  v2
