crates/ir/tests/ir/snapshots/main__ir__lower__extern__extern_trait_multi_method.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module extern__extern_trait_multi_method

struct MyHandler { name: String }
trait Callback[l12] { on_failure(l12, String): Unit; on_response(l12, String): Unit }
instance extern__extern_trait_multi_method.Callback[MyHandler] { on_failure=Callback$$MyHandler$$on_failure, on_response=Callback$$MyHandler$$on_response }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn handle(v0: Dict[extern__extern_trait_multi_method.Callback, n12], v1: n12) -> Unit =
  let v2: Unit = trait_call extern__extern_trait_multi_method.Callback.on_failure(v0, v1, "test")
  v2

fn main() -> Unit =
  let v4: MyHandler = construct MyHandler("h1")
  let v5: Dict[extern__extern_trait_multi_method.Callback, MyHandler] = get_dict extern__extern_trait_multi_method.Callback[MyHandler]
  let v6: Unit = call handle(v5, v4)
  let v3: Dict[core/show.Show, Unit] = get_dict core/show.Show[Unit]
  let v7: Unit = call println(v3, v6)
  v7

fn Callback$$MyHandler$$on_failure(v8: MyHandler, v9: String) -> Unit =
  let v10: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v11: Unit = call println(v10, v9)
  v11

fn Callback$$MyHandler$$on_response(v12: MyHandler, v13: String) -> Unit =
  let v14: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v15: Unit = call println(v14, v13)
  v15
