crates/ir/tests/ir/snapshots/main__ir__lower__extern__extern_trait_where_clause.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module extern__extern_trait_where_clause

trait Runnable[h8] { run(h8): Unit }
instance extern__extern_trait_where_clause.Runnable[$Fun0$Unit] { run=Runnable$$$Fun0$Unit$$run }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[w7]) -> List[w7]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn invoke(v0: Dict[extern__extern_trait_where_clause.Runnable, j8], v1: j8) -> Unit =
  let v2: Unit = trait_call extern__extern_trait_where_clause.Runnable.run(v0, v1)
  v2

fn main() -> Unit =
  let v6: () -> Unit = make_closure(lambda$28, [])
  let v7: Dict[extern__extern_trait_where_clause.Runnable, () -> Unit] = get_dict extern__extern_trait_where_clause.Runnable[() -> Unit]
  let v8: Unit = call invoke(v7, v6)
  let v3: Dict[core/show.Show, Unit] = get_dict core/show.Show[Unit]
  let v9: Unit = call println(v3, v8)
  v9

fn Runnable$$$Fun0$Unit$$run(v10: () -> Unit) -> Unit =
  let v11: Unit = call_closure v10()
  v11

fn lambda$28() -> Unit =
  let v4: Dict[core/show.Show, String] = get_dict core/show.Show[String]
  let v5: Unit = call println(v4, "hi")
  v5
