crates/ir/tests/ir/snapshots/main__ir__lower__extern__local_extern_canonical_provenance.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module extern__local_extern_canonical_provenance

extern java "java.lang.Math" abs(Int) -> Int
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare abs: (Int) -> Int
declare println: (g) -> Unit

fn main() -> Unit =
  let v1: Int = call abs(5)
  let v0: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v2: Unit = call println(v0, v1)
  v2
